<resources>
    <string name="app_name">Equiloan</string>
    <string name="logo">Logo</string>
    <string name="user_icon">User Icon</string>
    <string name="welcome_message">Welcome back! Please sign in to continue</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="email_or_phone">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user_signup">New user?</string>
    <string name="signup">Sign up</string>
    <string name="proceed">Proceed</string>
    <string name="otp">OTP VERIFICATION</string>
    <string name="enterOtp">Enter Otp sent to your email</string>
    <string name="verify">VERIFY</string>
    <string name="otpFailure">Did not receive OTP? </string>
    <string name="resendOtp">RESEND</string>
    <string name="creditLimit">Your credit limit:</string>
    <string name="interest">Applicable interest rate:</string>
</resources>