<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:src="@drawable/verify"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toTopOf="@+id/main"
        android:id="@+id/imageVerify"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/imageVerify"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        android:text="@string/otp"

        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/otpTextView"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:text="@string/enterOtp"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/otpTextView"
        android:layout_marginTop="40dp"
        android:id="@+id/enterOtpTextview"
        />
<com.chaos.view.PinView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/pinview"
    app:itemCount="4"
    app:itemWidth="30dp"
    app:itemHeight="30dp"
    android:gravity="center"
    android:layout_marginTop="40dp"
    android:itemBackground="@color/white"
    android:layout_gravity="center"
    android:inputType="number"
    android:cursorVisible="true"
    app:hideLineWhenFilled="false"
    app:itemRadius="5dp"
    app:layout_constraintStart_toStartOf="@+id/main"
   app:layout_constraintEnd_toEndOf="@+id/main"
    app:layout_constraintTop_toBottomOf="@id/enterOtpTextview" >

</com.chaos.view.PinView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintTop_toBottomOf="@id/pinview"
        android:id="@+id/OtpResend"
        android:text="@string/otpFailure"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/OtpResend"
        android:text="@string/resendOtp"
        app:layout_constraintTop_toBottomOf="@id/pinview"
        android:layout_marginTop="40dp"
        android:textColor="@color/primary"
        android:layout_marginStart="5dp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/OtpResend"
        android:layout_marginTop="40dp"
        android:text="@string/verify"
        android:backgroundTint="@color/login_red"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/verifyButton"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/main"/>

</androidx.constraintlayout.widget.ConstraintLayout>