<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".loginActivity"
    android:background="@drawable/colorgradient">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/vector"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/userIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/account"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/userIcon"
        android:layout_marginTop="60dp"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/primary"
        android:id="@+id/Equiloan"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Equiloan"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome_message"
        android:textSize="18sp"
        android:textColor="@color/welcome"
        android:textAlignment="center"
        android:id="@+id/welcomeMessage"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/google"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="165dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        android:layout_marginTop="30dp"
        android:text="@string/continue_with_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="30dp"
        android:id="@+id/continueGoogle"
        android:textColor="@color/welcome"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/continueGoogle"
        android:text="@string/or"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/or"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailInput"
        android:hint="Email or Phone Number"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/welcome"
        app:hintTextAppearance="@color/welcome"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:scrollbarSize="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="Enter your password..."
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@color/welcome"
        android:textColorHint="@color/welcome"
        app:passwordToggleTint="@color/welcome"
        android:scrollbarSize="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/password">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:ems="15"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"/>

   </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/forgot_password"
        android:id="@+id/forgotPassword"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/login"
        android:backgroundTint="@color/login_red"
        android:textColor="@android:color/white"
        android:id="@+id/login"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:layout_marginTop="30dp"
        android:text="@string/new_user_signup"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:text="@string/signup"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:textColor="@color/forgot_password"
        android:id="@+id/signup"/>





</androidx.constraintlayout.widget.ConstraintLayout>